--- a/SDL_TextEditingEvent.mediawiki
+++ b/SDL_TextEditingEvent.mediawiki
@@ -36,7 +36,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-* [[SDL_TextEditingEvent]]() is a member of the [[SDL_Event]] union and is used when an event of type SDL_TEXTEDITING is reported. *
+* [[SDL_TextEditingEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_TEXTEDITING is reported. *
 
 == Related Enumerations ==
 :[[SDL_EventType]]
