--- a/Contributing.mediawiki
+++ b/Contributing.mediawiki
@@ -15,8 +15,6 @@ Thank you!
 ```
 
 
-== Before You Start ==
-
 Our goal is to create the best documentation for SDL possible.  To this end we have adopted the following guiding principles and would appreciate your keeping them in mind as you create your contributions.
 : This wiki should:
 * have a consistent look and feel throughout
@@ -29,7 +27,7 @@ To help you with this we have created a series of resources.
 
 == Resources ==
 === Feedback Form ===
-Every page of the wiki contains a Feedback form where you can post quick content ideas, questions, suggestions, etc.  Simply click the down arrow, fill in the text field with your contribution, and click Submit.  We'll take it from there!
+Every page of the wiki contains a drop down Feedback form (upper right) where you can post quick content ideas, questions, suggestions, etc.  Simply click the form tab, fill in the text field with your contribution, and click Submit.  We'll take it from there!
 
 === Mailing List ===
 The [http://lists.libsdl.org/listinfo.cgi/docs-libsdl.org Documentation Mailing List] has been set up to allow users to discuss documentation-related topics.  Anything from content to conventions, questions and comments can be shared in the Mailing List.  Plus, keep up with what others are saying and doing on the wiki.  
@@ -37,13 +35,34 @@ The [http://lists.libsdl.org/listinfo.cgi/docs-libsdl.org Documentation Mailing 
 We encourage all contributors to join the mailing list and participate in the discussions there.  It is a great place to discuss areas that need contributions and to let others know what you are working on or if you are able to help address a request.
 
 === Style Guides by Topic ===
-These are the core of our contribution resources.  There is a style guide for each type of contribution you may wish to make.  
+These are the core of our contribution resources.  There is a style guide for each type of contribution you may wish to make.  Please review the relevant one(s) before you begin to edit and check back periodically for updates.  
+
+{|
+|Table with links to each style guide
+|Basic description of SG contents
+|-
+|[[#|Wiki Basics]]
+|quick reference for wiki markup used in this wiki<br/>miscellaneous helpful notes
+|-
+|[[#|Code Examples]]
+|information on adding Code Examples to any API page
+|-
+|[[#|Remarks]]
+|information on adding Remarks to any API page
+|-
+|[[#|Tutorials]]
+|information on adding a tutorial to the tutorials page<br/>information on creating a new tutorial within the wiki
+|}
 
 It is very important to us that this wiki remains as friendly and professional as possible.  We have created detailed style guides to help you ensure that your contributions fit in seamlessly and help to make the wiki that much better for other users.  
 
-If you ever find something that is not addressed in a style guide please post your questions using the feedback form, on the mailing list, or email <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>
+If you find something that is not addressed or is unclear in a style guide please post your questions using the feedback form, on the mailing list, or email us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
 
 === Email Contact ===
 For anything that is not addressed in the above you can always send an email to <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
 
- 
+------
+== Disclaimer ==
+```#!wiki note
+All content modifications are subject to review.  We reserve the right to remove or modify any content added to this wiki at any time.  You may direct questions or concerns to <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
+```
