--- a/Contributing.mediawiki
+++ b/Contributing.mediawiki
@@ -64,5 +64,5 @@ For anything that is not addressed in the above you can always send an email to 
 ------
 == Disclaimer ==
 ```#!wiki note
-All content modifications are subject to review.  We reserve the right to remove or modify any content added to this wiki at any time.  You may direct questions or concerns to <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
+All content modifications are subject to review for consistency and quality.  We reserve the right to remove or modify any content added to this wiki at any time.  You may direct questions or concerns to <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
 ```
