--- a/FAQGeneral.mediawiki
+++ b/FAQGeneral.mediawiki
@@ -2,7 +2,7 @@
 
 
 == What is Simple DirectMedia Layer? ==
-Very simply, Simple DirectMedia Layer, or SDL for short, is a library that allows you low level access to a video framebuffer, audio output, mouse, keyboard, and joysticks across a wide variety of operating systems. 
+Very simply, Simple !DirectMedia Layer, or SDL for short, is a library that allows you low level access to a video framebuffer, audio output, mouse, keyboard, and joysticks across a wide variety of operating systems. 
 
 == What platforms are supported? ==
 The current version supports Linux, Windows, MacOS X, FreeBSD, OpenBSD, BSD/OS, Solaris, and QNX.
@@ -30,7 +30,7 @@ The nice folks at gmane.org have provided a news <-> mail gateway for the main S
 Yes, you can find people hanging out on the IRC server at irc.freenode.net on the channel #SDL
 
 == Is there an official logo? ==
-Yes, the official SDL logo was created by Arne Claus, and is available here: http://www.libsdl.de/logo/ Several community contributed logo ideas are also available at that URL. You are welcome to use any of them, as well as any artwork on the SDL website, to represent Simple DirectMedia Layer.
+Yes, the official SDL logo was created by Arne Claus, and is available here: http://www.libsdl.de/logo/ Several community contributed logo ideas are also available at that URL. You are welcome to use any of them, as well as any artwork on the SDL website, to represent Simple !DirectMedia Layer.
 
 == I have a project that uses SDL, how do I add it to the SDL website? ==
 If you have a project that you feel is ready for the general public, you can add it to the SDL website:
