--- a/Contributing.mediawiki
+++ b/Contributing.mediawiki
@@ -23,19 +23,20 @@ Our goal is to create the best documentation for SDL possible.  To this end we h
 * contain high quality information
 * be as simple and straight forward as possible
 
-To help you with this we have created a series of resources.
+To help you with this we have created a series of resources:
 
-== Resources ==
 === Feedback Form ===
-Every page of the wiki contains a drop down Feedback form (upper right) where you can post quick content ideas, questions, suggestions, etc.  Simply click the form tab, fill in the text field with your contribution, and click Submit.  We'll take it from there!
+This is the quickest and simplest way to contribute!  Every page of the wiki contains a drop down ''Feedback'' form (upper right) where you can post quick content ideas, questions, suggestions, etc.  Simply click the form tab, fill in the text field with your contribution, and click ''Submit''.  We'll take it from there!
 
 === Mailing List ===
-The [http://lists.libsdl.org/listinfo.cgi/docs-libsdl.org Documentation Mailing List] has been set up to allow users to discuss documentation-related topics.  Anything from content to conventions, questions and comments can be shared in the Mailing List.  Plus, keep up with what others are saying and doing on the wiki.  
+The [http://lists.libsdl.org/listinfo.cgi/docs-libsdl.org Documentation Mailing List] has been set up to allow users to discuss documentation-related topics.  Anything from conventions to needed content, questions or comments, can be shared in the Mailing List.  Plus, keep up with what others are saying and doing on the wiki.  
 
 We encourage all contributors to join the mailing list and participate in the discussions there.  It is a great place to discuss areas that need contributions and to let others know what you are working on or if you are able to help address a request.
 
 === Style Guides by Topic ===
-These are the core of our contribution resources.  There is a style guide for each type of contribution you may wish to make.  Please review the relevant one(s) before you begin to edit and check back periodically for updates.  
+These are the core of our contribution resources.  There is a style guide for each type of contribution you may wish to make as well as the [http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics] guide which contains global information that all contributors should have.  
+
+We recommend that you begin with Wiki Basics and then dive into the topic-specific guides that interest you before you begin to edit.  Please check back periodically for reminders and updates!
 
 {|
 |Table with links to each style guide
@@ -56,7 +57,7 @@ These are the core of our contribution resources.  There is a style guide for ea
 
 It is very important to us that this wiki remains as friendly and professional as possible.  We have created detailed style guides to help you ensure that your contributions fit in seamlessly and help to make the wiki that much better for other users.  
 
-If you find something that is not addressed or is unclear in a style guide please post your questions using the feedback form, on the mailing list, or email us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
+If you find something that is not addressed or is unclear in a style guide please post your questions using the feedback form, the mailing list, or email us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
 
 === Email Contact ===
 For anything that is not addressed in the above you can always send an email to <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
