--- a/SGWikiBasics.mediawiki
+++ b/SGWikiBasics.mediawiki
@@ -8,6 +8,52 @@
 <span id="ToC"></span>
 
 
+== Getting Started ==
+
+<!> '''In general, existing content, including markup, should not be modified or removed.'''
+
+=== Opening An Editor ===
+If a page can be edited you will see two options to choose from in the left column:
+ 1. <<Color2(blue,Edit (Text))>>
+  The Text editor provides more power/flexibility for editing than the GUI editor but requires that you know the wiki markup.  Use the Text editor to see the content with raw markup.  You will need to use the Preview feature to view the content as it will appear when saved.
+ (!) Specific markup instructions in this guide are for use with the Text editor but should also work in the GUI editor.<br/>
+ For information on wiki markup not included here, or other MoinMoin-specific questions, please see the [http://wiki.libsdl.org/moin.cgi/HelpOnEditing wiki help documentation].
+
+ 1. <<Color2(blue,Edit (GUI))>>
+  The GUI editor provides buttons, much like a simple word processor, to add formatting markup such as bolding text, making a table, or creating a numbered list.  It is simpler to use than the Text editor but does not provide buttons for all the possible markup.  Use the GUI editor to see the content appear roughly as it would on the screen as you edit or if you do not know or want to use the wiki markup.
+ (!) The GUI editor is fairly self-explanatory; however, if you require further assistance, see [http://wiki.libsdl.org/moin.cgi/HelpOnGraphicalEditor HelpOnGraphicalEditor] for more detailed instructions.
+
+Note that some formatting will appear slightly different in preview mode than on the finished screen.
+
+
+=== Saving Your Changes ===
+Before you save your changes please include a note in the Comment field below the editing box that summarizes what you have done.
+ ''Sample comments'': 
+* added comment to end of remarks
+* added code example to C++ section
+* remarked on use of function with [sound card model]
+
+{i} Especially when using the text editor, use the <<Color2(blue,Preview)>> function in the left sidebar before saving your changes to ensure that the markup you have included is producing the desired result as well as to scan for errors in a different view.
+
+When you have completed adding your content and are satisfied with the formatting use the <<Color2(blue,Save Changes)>> function in the left sidebar to save your changes.
+
+'''Automatic Backup of Drafts'''<br/>
+~-(from: [http://wiki.libsdl.org/moin.cgi/HelpOnEditing Help On Editing])-~
+
+ Every time you are in the editor and use the "Preview", "Spell Check", "Cancel" or "Save Changes" buttons, moin saves a draft copy of your work internally. Use preview often!
+
+ If you hit "cancel" accidentally, your machine crashes, or the browser window was accidentally closed, then the automatic backup of your draft may be easily recovered.
+
+ To recover that draft, you simply edit that page again. If there is a draft, an alert message will be in the message box [at the top] and a "load draft" button will be present [in the left column]. Clicking the "load draft" will load your saved draft into the editor box replacing the current revision already loaded. You can continue editing the loaded draft, but this time try to save it at the end. :)
+
+ (!) Don't use the "preview", "spell check", "save changes" or "cancel" buttons on that page before "load draft" or you will overwrite your old draft with a new one.
+
+ If you successfully save a page, the internal draft copy of it is not needed any more and will be deleted. 
+
+[[#ToC|Return to Table of Contents]]
+
+
+
 <span id="markup"></span>
 == Some Markup Basics ==
 Below is a summary of the most commonly used markup in this wiki and some hints and tricks for using it.
