--- a/Contributing.mediawiki
+++ b/Contributing.mediawiki
@@ -25,14 +25,17 @@ Our goal is to create the best documentation for SDL possible.  To this end we h
 
 To help you with this we have created a series of resources:
 
+<span id="feedback"></span>
 === Feedback Form ===
 This is the quickest and simplest way to contribute!  Every page of the wiki contains a drop down ''Feedback'' form (upper right) where you can post quick content ideas, questions, suggestions, etc.  Simply click the form tab, fill in the text field with your contribution, and click ''Submit''.  We'll take it from there!
 
+<span id="list"></span>
 === Mailing List ===
 The [http://lists.libsdl.org/listinfo.cgi/docs-libsdl.org Documentation Mailing List] has been set up to allow users to discuss documentation-related topics.  Anything from conventions to needed content, questions or comments, can be shared in the Mailing List.  Plus, keep up with what others are saying and doing on the wiki.  
 
 We encourage all contributors to join the mailing list and participate in the discussions there.  It is a great place to discuss areas that need contributions and to let others know what you are working on or if you are able to help address a request.
 
+<span id="guides"></span>
 === Style Guides by Topic ===
 These are the core of our contribution resources.  There is a style guide for each type of contribution you may wish to make as well as the [http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics] guide which contains global information that all contributors should have.  
 
@@ -59,6 +62,7 @@ It is very important to us that this wiki remains as friendly and professional a
 
 If you find something that is not addressed or is unclear in a style guide please post your questions using the feedback form, the mailing list, or email us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
 
+<span id="email"></span>
 === Email Contact ===
 For anything that is not addressed in the above you can always send an email to <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
 
