--- a/Contributing.mediawiki
+++ b/Contributing.mediawiki
@@ -25,7 +25,7 @@ Our goal is to create the best documentation for SDL possible.  To this end we h
 
 To help you with this we have created a series of resources:
 
-<span id="feedback"></span>
+<span id="form"></span>
 === Feedback Form ===
 This is the quickest and simplest way to contribute!  Every page of the wiki contains a drop down ''Feedback'' form (upper right) where you can post quick content ideas, questions, suggestions, etc.  Simply click the form tab, fill in the text field with your contribution, and click ''Submit''.  We'll take it from there!
 
