--- a/Contributing.mediawiki
+++ b/Contributing.mediawiki
@@ -31,7 +31,7 @@ This is the quickest and simplest way to contribute!  Every page of the wiki con
 
 <span id="list"></span>
 === Mailing List ===
-The [http://lists.libsdl.org/listinfo.cgi/docs-libsdl.org Documentation Mailing List] has been set up to allow users to discuss documentation-related topics.  Anything from conventions to needed content, questions or comments, can be shared in the Mailing List.  Plus, keep up with what others are saying and doing on the wiki.  
+The [http://lists.libsdl.org/listinfo.cgi/docs-libsdl.org Documentation Mailing List] has been set up to allow users to share documentation-related topics.  Anything from conventions to needed content, questions or comments, can be posted to the Mailing List.  Plus, keep up with what others are saying and doing on the wiki.  
 
 We encourage all contributors to join the mailing list and participate in the discussions there.  It is a great place to discuss areas that need contributions and to let others know what you are working on or if you are able to help address a request.
 
@@ -39,23 +39,23 @@ We encourage all contributors to join the mailing list and participate in the di
 === Style Guides by Topic ===
 These are the core of our contribution resources.  There is a style guide for each type of contribution you may wish to make as well as the [http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics] guide which contains global information that all contributors should have.  
 
-We recommend that you begin with Wiki Basics and then dive into the topic-specific guides that interest you before you begin to edit.  Please check back periodically for reminders and updates!
+'''We recommend that you begin with Wiki Basics and then dive into the topic-specific guides that interest you before you begin to edit.'''  Please check back periodically for reminders and updates!
 
 {|
-|Table with links to each style guide
-|Basic description of SG contents
+|<bgcolor="#EDEDED">''Style Guide''
+|<bgcolor="#EDEDED">''Topics Covered''
 |-
 |[http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics]
-|quick reference for wiki markup used in this wiki<br/>miscellaneous helpful notes
+|starting to edit<br/>saving changes<br/>quick reference for wiki markup used in this wiki<br/>miscellaneous notes
 |-
-|[[|Code Examples]]
-|information on adding Code Examples to any API page
+|[http://wiki.libsdl.org/moin.cgi/SGCodeExamples Code Examples]
+|adding Code Examples to any API page
 |-
 |[[|Remarks]]
-|information on adding Remarks to any API page
+|adding Remarks to any API page
 |-
-|[[|Tutorials]]
-|information on adding a tutorial to the tutorials page<br/>information on creating a new tutorial within the wiki
+|''Coming Soon!''
+|adding an existing tutorial to the tutorials page<br/>creating a new tutorial within the wiki
 |}
 
 It is very important to us that this wiki remains as friendly and professional as possible.  We have created detailed style guides to help you ensure that your contributions fit in seamlessly and help to make the wiki that much better for other users.  
