--- a/Contributing.mediawiki
+++ b/Contributing.mediawiki
@@ -9,7 +9,7 @@
 We are very pleased that you are interested in contributing!  Here's what you need to know:
 
 ```#!wiki important
-Due to spammers, write access to this wiki is disabled by default.  If you haven't already, please email your wiki username and the type(s) of edits you would like to make to <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> to be given write access and to coordinate efforts.
+Due to spammers, write access to this wiki is disabled by default.  If you haven't already, please email your wiki username and the kind(s) of edits you would like to make to <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>> to be given write access and to coordinate efforts.
 
 Thank you!
 ```
@@ -27,19 +27,19 @@ To help you with this we have created a series of resources:
 
 <span id="form"></span>
 === Feedback Form ===
-This is the quickest and simplest way to contribute!  Every page of the wiki contains a drop down ''Feedback'' form (upper right) where you can post quick content ideas, questions, suggestions, etc.  Simply click the form tab, fill in the text field with your contribution, and click ''Submit''.  We'll take it from there!
+: This is the quickest and simplest way to contribute!  Every page of the wiki contains a drop down ''Feedback'' form (upper right) where you can post quick content ideas, questions, suggestions, etc.  Simply click the form tab, fill in the text field with your contribution, and click ''Submit''.  We'll take it from there!
 
 <span id="list"></span>
 === Mailing List ===
-The [http://lists.libsdl.org/listinfo.cgi/docs-libsdl.org Documentation Mailing List] has been set up to allow users to share documentation-related topics.  Anything from conventions to needed content, questions or comments, can be posted to the Mailing List.  Plus, keep up with what others are saying and doing on the wiki.  
+: The [http://lists.libsdl.org/listinfo.cgi/docs-libsdl.org Documentation Mailing List] has been set up to allow users to share documentation-related topics.  Anything from conventions to needed content, questions or comments, can be posted to the Mailing List.  Plus, keep up with what others are saying and doing on the wiki.  
 
-We encourage all contributors to join the mailing list and participate in the discussions there.  It is a great place to discuss areas that need contributions and to let others know what you are working on or if you are able to help address a request.
+: We encourage all contributors to join the mailing list and participate in the discussions there.  It is a great place to discuss areas that need contributions and to let others know what you are working on or if you are able to help address a request.
 
 <span id="guides"></span>
 === Style Guides by Topic ===
-These are the core of our contribution resources.  There is a style guide for each type of contribution you may wish to make as well as the [http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics] guide which contains global information that all contributors should have.  
+: These are the core of our contribution resources.  There is a style guide for each type of contribution you may wish to make as well as the [http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics] guide which contains global information that all contributors should have.  
 
-'''We recommend that you begin with Wiki Basics and then dive into the topic-specific guides that interest you before you begin to edit.'''  Please check back periodically for reminders and updates!
+: '''We recommend that you begin with Wiki Basics and then dive into the topic-specific guides that interest you before you begin to edit.'''  Please check back periodically for reminders and updates!
 
 {|
 |<bgcolor="#EDEDED">''Style Guide''
