--- a/Contributing.mediawiki
+++ b/Contributing.mediawiki
@@ -39,12 +39,10 @@ To help you with this we have created a series of resources:
 : '''We recommend that you begin with Wiki Basics and then dive into the topic-specific guides that interest you before you begin to edit.'''  Please check back periodically for reminders and updates!
 
  ||<bgcolor="#EDEDED">''Style Guide''||<bgcolor="#EDEDED">''Topics Covered''||
- ||[http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics]||starting to edit<br/>saving changes<br/>quick reference for wiki markup used in this wiki<br/>miscellaneous notes||
- ||[http://wiki.libsdl.org/moin.cgi/SGCodeExamples Code Examples]||adding Code Examples to any API page||
- ||[[|Remarks]]||adding Remarks to any API page||
- ||''Coming Soon!''||adding an existing tutorial to the tutorials page<br/>creating a new tutorial within the wiki||
-
-: It is very important to us that this wiki remains as friendly and professional as possible.  We have created detailed style guides to help you ensure that your contributions fit in seamlessly and help to make the wiki that much better for other users.  
+ ||[http://wiki.libsdl.org/moin.cgi/SGWikiBasics Wiki Basics]||Starting to edit<br/>Saving changes<br/>Quick reference for wiki markup used in this wiki<br/>Miscellaneous notes||
+ ||[http://wiki.libsdl.org/moin.cgi/SGCodeExamples Code Examples]||Adding Code Examples to any API page||
+ ||[[|Remarks]]||Adding Remarks to any API page||
+ ||''Coming Soon!''||Adding an existing tutorial to the tutorials page<br/>Creating a new tutorial within the wiki||
 
 : If you find something that is not addressed or is unclear in a style guide please post your questions using the feedback form, the mailing list, or email us at <<MailTo(ANTI SPAM wiki AT libsdl DOT org)>>.
 
