update content - 1/27 changeset 5123

--- a/CategoryAtomic.mediawiki
+++ b/CategoryAtomic.mediawiki
@@ -39,6 +39,16 @@ All of the atomic operations that modify memory are full memory barriers.
 
 <<Color2(green,Does the comment in the header about intrin.h belong here?)>>
 
+=== Atomic Locks ===
+
+The atomic locks are efficient spinlocks using CPU instructions, but are vulnerable to starvation and can spin forever if a thread holding a lock has been terminated.  For this reason you should minimize the code executed inside an atomic lock and never do expensive things like API or system calls while holding them.
+
+/!\ The atomic locks are not safe to lock recursively.
+
+Porting Note:
+ The spin lock functions and type are required and can not be emulated because they are used in the atomic emulation code.
+
+
 == Functions ==
 
 <<FullSearch(category:CategoryAtomic -CategoryEnum -CategoryStruct)>>
