--- a/SDL_AtomicCAS.mediawiki
+++ b/SDL_AtomicCAS.mediawiki
@@ -41,6 +41,7 @@ You can add your code example here
 
 
 == Related Functions ==
+:[[SDL_AtomicCASPtr]]
 
 ----
 [[CategoryAPI]], [[CategoryAtomic]]
