--- a/SDL_AtomicTryLock.mediawiki
+++ b/SDL_AtomicTryLock.mediawiki
@@ -30,6 +30,8 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_AtomicLock]]
+:[[SDL_AtomicUnlock]]
 
 ----
 [[CategoryAPI]], [[CategoryAtomic]]
