minor change for consistency

--- a/SDL_AtomicSet.mediawiki
+++ b/SDL_AtomicSet.mediawiki
@@ -15,7 +15,7 @@ int SDL_AtomicSet(SDL_atomic_t* a,
 == Function Parameters ==
 {|
 |'''a'''
-|^the atomic variable to set^
+|^the [[SDL_atomic_t]] structure filled in with the variable^
 |-
 |'''v'''
 |^the desired value^
