--- a/SDL_AtomicAdd.mediawiki
+++ b/SDL_AtomicAdd.mediawiki
@@ -33,6 +33,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_AtomicAdd]] ???
 :[[SDL_AtomicIncRef]] ???
 
 ----
