--- a/SDL_AtomicGetPtr.mediawiki
+++ b/SDL_AtomicGetPtr.mediawiki
@@ -30,6 +30,7 @@ You can add your code example here
 
 == Related Functions ==
 :[[SDL_AtomicCASPtr]]
+:[[SDL_AtomicGet]]
 :[[SDL_AtomicSetPtr]]
 
 ----
