--- a/SDL_AtomicSetPtr.mediawiki
+++ b/SDL_AtomicSetPtr.mediawiki
@@ -39,6 +39,7 @@ You can add your code example here
 == Related Functions ==
 :[[SDL_AtomicCASPtr]]
 :[[SDL_AtomicGetPtr]]
+:[[SDL_AtomicSet]]
 
 ----
 [[CategoryAPI]], [[CategoryAtomic]]
