--- a/CategoryAtomic.mediawiki
+++ b/CategoryAtomic.mediawiki
@@ -2,7 +2,6 @@
 <!-- #master-date:Unknown-Date -->
 <!-- format wiki -->
 <!-- language en -->
-'''DRAFT'''
 
 = Atomic Operations =
 
@@ -14,14 +13,14 @@
 This category contains functions for handling atomic operations.
 
 /!\ IMPORTANT:
-: If you are not an expert in concurrent lockless programming, you should only be using the atomic lock and reference counting functions in this file.  In all other cases you should be protecting your data structures with full mutexes.
+: If you are not an expert in concurrent lockless programming, you should only be using the atomic lock and reference counting functions in this file.  In all other cases you should be protecting your data structures with full mutexes.  ''Seriously, here be dragons!''
 
 The list of "safe" functions to use are:
 * [[SDL_AtomicLock]]()
 * [[SDL_AtomicUnlock]]()
 * [[SDL_AtomicIncRef]]()
 * [[SDL_AtomicDecRef]]()
-''Seriously, here be dragons!''
+
 
 You can find out a little more about lockless programming and the subtle issues that can arise here:
  http://msdn.microsoft.com/en-us/library/ee418650%28v=vs.85%29.aspx
