update content - w/ Sam; remove draft

--- a/SDL_AtomicAdd.mediawiki
+++ b/SDL_AtomicAdd.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_AtomicAdd =
 Use this function to add to an atomic variable.
@@ -15,14 +14,14 @@ int SDL_AtomicAdd(SDL_atomic_t* a,
 == Function Parameters ==
 {|
 |'''a'''
-|^the [[SDL_atomic_t]] structure filled in with the variable^
+|a pointer to an [[SDL_atomic_t]] variable to be modified
 |-
 |'''v'''
-|^the desired value to add^
+|the desired value to add
 |}
 
 == Return Value ==
-Returns the previous value of the atomic variable on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns the previous value of the atomic variable.
 
 == Code Examples ==
 ```c++
@@ -33,8 +32,8 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_AtomicAdd]] ???
-:[[SDL_AtomicIncRef]] ???
+:[[SDL_AtomicDecRef]]
+:[[SDL_AtomicIncRef]]
 
 ----
 [[CategoryAPI]], [[CategoryAtomic]]
