update content - w/ Sam; remove draft

--- a/SDL_AtomicCASPtr.mediawiki
+++ b/SDL_AtomicCASPtr.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_AtomicCASPtr =
 Use this function to set a pointer to a new value if it is currently an old value.
@@ -8,7 +7,7 @@ Use this function to set a pointer to a new value if it is currently an old valu
 
 == Syntax ==
 ```c++
-SDL_bool SDL_AtomicCASPtr_(void** a,
+SDL_bool SDL_AtomicCASPtr(void** a,
                            void*  oldval,
                            void*  newval)
 ```
@@ -16,13 +15,13 @@ SDL_bool SDL_AtomicCASPtr_(void** a,
 == Function Parameters ==
 {|
 |'''a'''
-|^a pointer to a pointer to an atomic variable^
+|a pointer to a pointer
 |-
 |'''oldval'''
-|a pointer to the old value
+|a pointer to the old pointer value
 |-
 |'''newval'''
-|a pointer to the new value
+|a pointer to the new pointer value
 |}
 
 == Return Value ==
@@ -34,7 +33,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-/!\ If you don't know what this function is for, you shouldn't use it!
+''You can add useful comments here''
 
 
 == Related Functions ==
