--- a/SDL_AtomicCASPtr.mediawiki
+++ b/SDL_AtomicCASPtr.mediawiki
@@ -8,8 +8,8 @@ Use this function to set a pointer to a new value if it is currently an old valu
 == Syntax ==
 ```c++
 SDL_bool SDL_AtomicCASPtr(void** a,
-                           void*  oldval,
-                           void*  newval)
+                          void*  oldval,
+                          void*  newval)
 ```
 
 == Function Parameters ==
@@ -18,10 +18,10 @@ SDL_bool SDL_AtomicCASPtr(void** a,
 |a pointer to a pointer
 |-
 |'''oldval'''
-|a pointer to the old pointer value
+|the old pointer value
 |-
 |'''newval'''
-|a pointer to the new pointer value
+|the new pointer value
 |}
 
 == Return Value ==
