--- a/SDL_AtomicDecRef.mediawiki
+++ b/SDL_AtomicDecRef.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_AtomicDecRef =
 Use this function to decrement an atomic variable used as a reference count.
@@ -14,7 +13,7 @@ SDL_bool SDL_AtomicDecRef(SDL_atomic_t* a)
 == Function Parameters ==
 {|
 |'''a'''
-|^the [[SDL_atomic_t]] structure filled in with the variable^
+|a pointer to an [[SDL_atomic_t]] variable to be modified
 |}
 
 == Return Value ==
