--- a/SDL_AtomicGet.mediawiki
+++ b/SDL_AtomicGet.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_AtomicGet =
 Use this function to get the value of an atomic variable.
@@ -14,11 +13,11 @@ int SDL_AtomicGet(SDL_atomic_t* a)
 == Function Parameters ==
 {|
 |'''a'''
-|^the [[SDL_atomic_t]] structure to query^
+|a pointer to an [[SDL_atomic_t]] variable to be modified
 |}
 
 == Return Value ==
-Returns the current value of the atomic variable on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns the current value of the atomic variable.
 
 == Code Examples ==
 ```c++
@@ -29,7 +28,6 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_AtomicGetPtr]]
 :[[SDL_AtomicSet]]
 
 ----
