--- a/SDL_AtomicIncRef.mediawiki
+++ b/SDL_AtomicIncRef.mediawiki
@@ -1,6 +1,5 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
 
 = SDL_AtomicIncRef =
 Use this function to increment an atomic variable used as a reference count.
@@ -8,19 +7,14 @@ Use this function to increment an atomic variable used as a reference count.
 
 == Syntax ==
 ```c++
-int SDL_AtomicIncRef(SDL_atomic_t* a)
+void SDL_AtomicIncRef(SDL_atomic_t* a)
 ```
 
 == Function Parameters ==
 {|
 |'''a'''
-|^the [[SDL_atomic_t]] structure filled in with the variable^
+|a pointer to an [[SDL_atomic_t]] variable to be modified
 |}
-
-== Return Value ==
-Returns ^the previous value of the atomic variable^ on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
-
-<<Color2(green,Is this the correct RV?)>>
 
 == Code Examples ==
 ```c++
