modify hidden include comment

--- a/CategoryAtomic.mediawiki
+++ b/CategoryAtomic.mediawiki
@@ -32,7 +32,7 @@ These operations may or may not actually be implemented using processor specific
 
 All of the atomic operations that modify memory are full memory barriers.
 
-<!-- #An Include begins here and is included on SDL_AtomicLock and SDL_AtomicTryLock.  Any changes between these comments will be reflected on those pages.  Please use caution when editing. -->
+<!-- #The following is included on SDL_AtomicLock and SDL_AtomicTryLock.  Any changes between these comments will be reflected on those pages.  Please use caution when editing.  Start include here. -->
 
 === Atomic Locks ===
 
